2010-05-08  Juanma Barranquero  <lekktu@gmail.com>

	* makefile.w32-in ($(BLD)/eval.$(O), $(BLD)/w32fns.$(O)):
	Update dependencies.

2010-05-08  Eli Zaretskii  <eliz@gnu.org>

	* fringe.c (update_window_fringes): Set up truncation bitmaps for
	R2L lines.

2010-05-08  Glenn Morris  <rgm@gnu.org>

	* Makefile.in (THIS_IS_MAKEFILE): Remove, unused.

	* Makefile.in (LIBS_TERMCAP): Set with configure, not cpp.
	(TERMCAP_OBJ): New, set by configure, replacing termcapobj.
	(termcapobj): Replace with TERMCAP_OBJ.
	(otherobj): Use $TERMCAP_OBJ instead of $termcapobj.
	(LIBES): Use LIBS_TERMCAP as a variable.

	* s/freebsd.h (osreldate.h): No longer include, since this file
	does not use __FreeBSD_version any more.

	* s/aix4-2.h (TERMINFO):
	* s/cygwin.h (TERMINFO):
	* s/darwin.h (TERMINFO, LIBS_TERMCAP) [HAVE_LIBNCURSES]:
	* s/freebsd.h (TERMINFO, LIBS_TERMCAP):
	* s/gnu-linux.h (TERMINFO, LIBS_TERMCAP) [HAVE_LIBNCURSES]:
	* s/gnu.h (TERMINFO, LIBS_TERMCAP) [HAVE_LIBNCURSES]:
	* s/hpux10-20.h (TERMINFO, LIBS_TERMCAP):
	* s/irix6-5.h (TERMINFO):
	* s/netbsd.h (LIBS_TERMCAP):
	* s/openbsd.h (TERMINFO, LIBS_TERMCAP):
	* s/sol2-6.h (LIBS_TERMCAP) [!TERMINFO]:
	* s/usg5-4.h (TERMINFO):
	Move to configure.

2010-05-07  Stefan Monnier  <monnier@iro.umontreal.ca>

	* eval.c (unbind_to): Don't unbind a local binding into the global
	binding when the local binding disappeared.  Inversely, don't unbind
	a global binding into a newly created local binding.
	* data.c (set_internal): Make its `buf' arg into a `where' arg so we
	can specify the frame to use, when applicable.  Adjust callers.

2010-05-07  Vincent Belaïche  <vincent.belaiche@gmail.com>
            Stefan Monnier  <monnier@iro.umontreal.ca>

	* floatfns.c (Fisnan, Fcopysign, Ffrexp, Fldexp): New functions.

2010-05-07  Eli Zaretskii  <eliz@gnu.org>

	* w32fns.c: Include w32.h.
	(Fw32_shell_execute): Decode the error message before passing it
	to `error'.  (Bug#6126)

	* msdos.c (dos_set_window_size):