@@ -740,7 +740,7 @@ DEFUN ("font-get-system-font", Ffont_get_system_font, Sfont_get_system_font,
 DEFUN ("tool-bar-get-system-style", Ftool_bar_get_system_style, Stool_bar_get_system_style,
        0, 0, 0,
        doc: /* Get the system tool bar style.
-If no system tool bar style is known, return `tool-bar-style' is set to a
+If no system tool bar style is known, return `tool-bar-style' if set to a
 known style.  Otherwise return image.  */)
   ()
 {
